<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.z0nen.menu.log_in_screen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textEmailAddress">

        <requestFocus android:layout_width="wrap_content" />

    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"/>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_alignBottom="@+id/editTextEmail"
        android:layout_alignStart="@+id/textView"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_marginTop="46dp" />

    <TextView
        android:id="@+id/textViewMess"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="@string/Message"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView1"
        android:visibility="invisible"/>



    <TextView
        android:id="@+id/textViewLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OilLevel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:layout_below="@id/textView2"
        android:layout_alignRight="@id/textViewMess"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PostLogin"
        android:id="@+id/btnLogin"
        android:onClick="loginPost"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editTextPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_guage_button_text"
        android:id="@+id/btnViewGauge"
        android:onClick="viewGaugePage"
        android:layout_marginTop="45dp"
        android:visibility="invisible"
        android:layout_below="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin" />


</RelativeLayout>
